--- a/main.css
+++ b/main.css
@@ -149,3 +149,6 @@
 .pulse {
   animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
+.custom-scrollbar-Home::-webkit-scrollbar {
+  display: none;
+}
